Fix: hide search bar on small screens and add a button to the search page

--- a/template/css/style.scss
+++ b/template/css/style.scss
@@ -73,6 +73,17 @@ body {
       }
     }
   }
+
+  .navbar-button {
+    display: inline-block;
+    margin-left: 5px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .search-bar {
+    display: none;
+  }
 }
 
 .artwork-thumbnail {
